typescript/checker/tests/conformance/es6/destructuring/iterableArrayPattern6.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            255,
        ),
        hi: BytePos(
            256,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/destructuring/iterableArrayPattern6.ts:17:5
   |
17 | var a: Bar, b: string[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            263,
        ),
        hi: BytePos(
            264,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/destructuring/iterableArrayPattern6.ts:17:13
   |
17 | var a: Bar, b: string[];
   |             ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            293,
        ),
        hi: BytePos(
            304,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/destructuring/iterableArrayPattern6.ts:18:17
   |
18 | [a, ...b] = new FooIterator;
   |                 ^^^^^^^^^^^

